# ScOPE

./: .gitignore  new_features.ipynb  pyproject.toml  req.txt  requirements.txt  test-text.py  test.ipynb  test.py  test_matching.ipynb  test_normal_matrix.ipynb  tests.ipynb
Examples/: matrix_usage.py  model_usage.py  optimize_model.py
Experiments/Clintox/: param_search.py  param_search_3.py  settings.toml
Experiments/Clintox/results/: optuna_clintox.sqlite3-journal
ScOPE/: __init__.py  compressor.py  distance.py  matching.py  matrix.py  model.py  models.py  utils.py
cdc/: __init__.py  compressor.py  eval.py
examples/: matrix_usage.py  model_usage.py
src/scope/: __init__.py  model.py
src/scope/compression/: __init__.py  compressors.py  dissimilarity.py  matrix.py  metrics.py
src/scope/compression/compressors/: __init__.py  base_.py  custom.py  integrated.py  smiles.py
src/scope/predictor/: __init__.py  base.py  ot.py  pd.py  predictor.py
src/scope/predictor/distances/: __init__.py  linear.py
src/scope/predictor/metrics/: __init__.py  metrics.py
src/scope/utils/: __init__.py  report_generation.py  sampling.py
src/scope/utils/optimization/: __init__.py  auto.py  base.py  params.py  random.py
